--- a/package.json
+++ b/package.json
@@ -7,19 +7,17 @@
     "aliases": "^1.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rimraf": "^0.2.2",
     "gulp-ruby-sass": "^3.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "gulp": "^3.9.1",
+    "browser-sync": "^2.24.6",
+    "gulp": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-pug": "^4.0.1",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8"
+    "gulp-pug": "^4.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
