--- a/package.json
+++ b/package.json
@@ -5,34 +5,49 @@
   "main": "gulpfile.js",
   "dependencies": {
     "aliases": "^1.0.0",
+    "babel-preset-stage-0": "^6.24.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.2",
     "gulp-ruby-sass": "^3.0.0",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.6",
-    "gulp": "^4.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "browser-sync": "^2.26.3",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-pug": "^4.0.1"
+    "gulp-pug": "^4.0.1",
+    "node-sass": "^4.9.3",
+    "path": "^0.12.7",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/derherbst/marta-p.git"
+    "url": ""
   },
   "keywords": [
-    "marta"
+    ""
   ],
   "author": "Georgy Gerbst",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/derherbst/marta-p/issues"
-  },
-  "homepage": "https://github.com/derherbst/marta-p#readme"
+  "homepage": ""
 }
