--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^4.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
     "pug-loader": "^2.4.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack"
+    "build": "npm run clean && webpack --mode=production",
+    "dev": "webpack",
+    "clean": "rimraf public"
   },
   "repository": {
     "type": "git",
