--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
+    "pug": "^2.0.3",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
