--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-preset-stage-3": "^6.24.1",
     "browser-sync": "^2.26.3",
     "css-loader": "^1.0.0",
+    "extract-loader": "^3.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^4.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
@@ -42,8 +44,8 @@
     "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "build": "npm run clean && webpack --mode=production",
-    "dev": "webpack",
+    "build": "npm run clean && webpack --mode production",
+    "dev": "webpack-dev-server --mode development --open",
     "clean": "rimraf public"
   },
   "repository": {
